--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -1,13 +1,19 @@
-<%= report_error(error, _("An problem occured when loading status information.")) if error %>
+<% unauthorized =  error.class == ActiveResource::UnauthorizedAccess -%>
+<%= report_error(error, _("An problem occured when loading status information.")) if error && !unauthorized%>
 
 <div class="status_status">
-  <% link_to "status" do %>
+  <% link_to (unauthorized ? "controlpanel" : "status") do %>
     <% unless status.blank? %>
       <div class="status-icon <%= level %>"></div>
       <span><%= status %></span>
     <% else %>
-       <div class="status-icon ok"></div>
-       <span><%= _("Your system is healthy.") %></span>
+      <% if unauthorized -%>
+	<div class="status-icon warning"></div>
+        <span><%= _("Unknown status - you have been logged out.") %></span>
+      <% else %>
+	<div class="status-icon ok"></div>
+        <span><%= _("Your system is healthy.") %></span>
+      <% end %>
     <% end %>
   <% end %>
   <% if restart_collectd %>
@@ -15,12 +21,14 @@
   <% end %>
 </div>
 
-<%# TODO FIXME: make the automatic reload time user configurable %>
-<!-- refresh the status again after 1 minute (= 60*1000 milisecods)-->
-<% javascript_tag do -%>
-  setTimeout(function() {
-    $('#status_status').html('<%= image_tag("/images/working.gif", :height=>"32", :width=>"32", :border=>"0") %> <%= _("Loading system information") %>')
-    <%= remote_function(:update => "status_status",
-      :url => { :controller => :status, :action => :show_summary, :background => true }) %>
-    }, 60*1000);
-<% end -%>
+<% unless error -%>
+  <%# TODO FIXME: make the automatic reload time user configurable %>
+  <!-- refresh the status again after 1 minute (= 60*1000 milisecods)-->
+  <% javascript_tag do -%>
+    setTimeout(function() {
+      $('#status_status').html('<%= image_tag("/images/working.gif", :height=>"32", :width=>"32", :border=>"0") %> <%= _("Loading system information") %>')
+      <%= remote_function(:update => "status_status",
+	:url => { :controller => :status, :action => :show_summary, :background => true }) %>
+      }, 60*1000);
+  <% end -%>
+<% end %>
