--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -9,7 +9,7 @@
     <% else %>
       <% if unauthorized -%>
 	<div class="status-icon warning"></div>
-        <span><%= _("Unknown status - you have been logged out.") %></span>
+        <span><%= _("Cannot read system status - you have been logged out.") %></span>
       <% else %>
 	<div class="status-icon ok"></div>
         <span><%= _("Your system is healthy.") %></span>
@@ -21,14 +21,13 @@
   <% end %>
 </div>
 
-<% unless error -%>
-  <%# TODO FIXME: make the automatic reload time user configurable %>
-  <!-- refresh the status again after 1 minute (= 60*1000 milisecods)-->
+<% if refresh_timeout.to_i > 0 -%>
+  <!-- refresh the status again after a timeout -->
   <% javascript_tag do -%>
     setTimeout(function() {
       $('#status_status').html('<%= image_tag("/images/working.gif", :height=>"32", :width=>"32", :border=>"0") %> <%= _("Loading system information") %>')
       <%= remote_function(:update => "status_status",
 	:url => { :controller => :status, :action => :show_summary, :background => true }) %>
-      }, 60*1000);
+      }, <%= refresh_timeout.to_i * 1000 -%>);
   <% end -%>
 <% end %>
