add default application.js to layout

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -30,6 +30,7 @@
   <!-- custom page scripts and css -->
   <%= yield :before_script %>
   <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/javascripts/application.js"></script>
   <%= yield :head %>
 
   <title><%= _("WebYaST") %></title>
