--- a/plugins/status/app/views/status/_status_graph.html.erb
+++ b/plugins/status/app/views/status/_status_graph.html.erb
@@ -3,7 +3,7 @@
 <script type="text/javascript">
 
 <% if data %>
-  $.jqplot('<%=graph_id(data[:group_id], data[:graph_id])%>',  [
+  $.jqplot('<%=graph_id(data[:group_id], data[:graph_id])+"_graph"%>',  [
   <% data[:lines].each do |line| %>
     <%= line[:values].inspect %>,
   <% end %>
@@ -50,5 +50,29 @@
 <% end %>
 
 </script>
+
+<p>
+  <% measurement_id = "measurement_" + data[:group_id] + "_" + data[:graph_id]%>
+  <%= _("Show last") %> <select name="<%=measurement_id%>" id="<%=measurement_id%>">
+    <option value="5" <%= " selected" if data[:minutes]==5 %>><%= _("5 Minutes") %></option>
+    <option value="15" <%= " selected" if data[:minutes]==15 %>><%= _("15 Minutes") %></option>
+    <option value="30" <%= " selected" if data[:minutes]==30 %>><%= _("30 Minutes") %></option>
+    <option value="60" <%= " selected" if data[:minutes]==60 %>><%= _("1 Hour") %></option>
+    <option value="360" <%= " selected" if data[:minutes]==360 %>><%= _("6 Hours") %></option>
+    <option value="720" <%= " selected" if data[:minutes]==720 %>><%= _("12 Hours") %></option>
+    </select>
+
+    <%= observe_field(measurement_id,
+      :update => graph_id(data[:group_id], data[:graph_id]),
+      :frequency => 0.25,
+      :loading => "$('#progress').show()",
+      :url => { :action => "evaluate_values", :group_id => data[:group_id], :graph_id => data[:graph_id] },
+      :complete => "$('#progress').hide()",
+      :with => "'minutes=' + value" ) %>
+</p>
+<p>         
+   <div id='<%= graph_id(data[:group_id], data[:graph_id])+"_graph" %>' style='width:400px;height:300px;float:left;'></div>
+   <br style='clear: both'>
+</p>
 
 
