fix back button name (bnc#588619)

--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -156,7 +156,7 @@
 
 <% end %>
 <fieldset>
-  <%= form_back_button %>
+  <%= link_to _("Back"), :controller => "controlpanel" %>
 </fieldset>
 </div>
 </html>
