--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -16,7 +16,7 @@
   <tbody>
   <% for group in @groups %>
   <tr>
-    <td><%= link_to ( h group.cn || "-none-" ), {:action => :edit, :id => group.cn} -%></td>
+    <td><%= link_to ( h group.cn || "-none-" ), {:action => :show, :id => group.cn} -%></td>
     <% if @permissions[:groupdelete] %>
     <td class="icon"><%= html_delete_link(group.cn, :destroy, _("Are you sure to delete group '%s'?") % group.cn ) %></td>
     <% end %>
