--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -14,14 +14,6 @@
         border: #669999 2px solid;
         padding: 5px;
      }
-/*
-     .GContainerUser {
-        width: 100px;
-     }
-     .GContainerGroups {
-        width: 400px;
-     }
-*/
      .GBox {
         border: #000 1px solid;
         cursor: pointer;
@@ -101,5 +93,5 @@
         <%= form_next_button :disabled => disabled, :onclick=>"return edit_user_validation();" %>
       </fieldset>
 <% end %>
-      <div><input type="hidden" id="all_grps_string" value="<%= @groups.all_grps_string %>" /></div>
+      <div><input type="hidden" id="all_grps_string" value="<%= @all_grps_string %>" /></div>
 </div>
