--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -8,15 +8,17 @@
 <table cellpadding="3px" width="50%"  style="border-collapse:collapse;">
   <thead>
     <tr>
-      <th>Group Name</th>
-      <th>Action</th>
+      <th><%= h _("Group Name") %></th>
+      <th><%= h _("Type") %></th>
+      <th><%= h _("Action") %></th>
     </tr>
   </thead>
 
   <tbody>
   <% for group in @groups %>
-  <tr>
+  <tr class= <%= cycle('odd', 'even') -%> >
     <td><%= link_to ( h group.cn || "-none-" ), {:action => :show, :id => group.cn} -%></td>
+    <td><%= h group.group_type %></td>
     <% if @permissions[:groupdelete] %>
     <td class="icon"><%= html_delete_link(group.cn, :destroy, _("Are you sure to delete group '%s'?") % group.cn ) %></td>
     <% end %>
