--- a/plugins/users/app/views/groups/show.html.erb
+++ b/plugins/users/app/views/groups/show.html.erb
@@ -20,6 +20,10 @@
       <label><%=_("Group ID")%></label>
       <%= f.text_field :gid, :disabled => (disabled or @adding) %>
     </p>
+     <p>
+      <label><%=_("Group Type")%></label>
+      <%= f.text_field :group_type, :disabled => true %>
+    </p>
     <p>
       <label><%=_("Default members")%></label>
       <%= f.text_field :default_members_string, :disabled => true %>
