--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -26,15 +26,6 @@ $(document).ready(function() {
 })
 
 
-// check if given service needs to refresh state
-function update_state_needed (id, cmd) {
-
-    if ($(id).is(':has(span.status_running)') || $(id).is(':has(div.service_enabled)'))
-	return (cmd == "stop" || cmd == "disable");
-    else
-	return (cmd == "start" || cmd == "enable");
-}
-
 // adapt the status icon of given service
 function toggle_service_info (id) {
     var heading	= $(id).closest('.service-content').siblings('div.list-fieldset-header');
@@ -136,7 +127,7 @@ function select_status (val) {
 </p>
 <div id="services" class="accordion">
 <%
-commands	= [ "start", "stop", "restart", ]
+commands	= [ "start", "stop", "restart", "enable", "disable"]
 @services.each do |service| %>
   <div class="list-fieldset">
 
@@ -172,7 +163,8 @@ commands	= [ "start", "stop", "restart", ]
 
   <p class="service-buttons">
   <% commands.each do |cmd|
-	if @permissions[:execute] %>
+        # do not show enable/disable part for custom services -->
+	if @permissions[:execute] && ! (service.custom? && (cmd == "enable" || cmd == "disable")) %>
 	    <%=
 		url	= {
 		    :id		=> cmd, 
@@ -190,12 +182,15 @@ commands	= [ "start", "stop", "restart", ]
 		    :class	=> "button",
 		    :id		=> cmd
 		}
-		html_options[:style]	= "display: none" if (cmd == "start" && service.status == 0) || (cmd == "stop" && service.status != 0)
+		html_options[:style]	= "display: none" if (cmd == "start" && service.status == 0) || (cmd == "stop" && service.status != 0) ||
+							     (cmd == "enable" && service.enabled?) || (cmd == "disable" && !service.enabled?) 
 
 		label = case cmd
 		  when "start" then _("Start")
 		  when "stop" then _("Stop")
 		  when "restart" then _("Restart")
+		  when "enable"	then _("Start on Boot")
+		  when "disable" then _("Do Not Start on Boot")
 		  else cmd
 		end
 
@@ -205,7 +200,7 @@ commands	= [ "start", "stop", "restart", ]
                 )
 
 		# dependent services must also update status
-		if (cmd == "start" || cmd == "restart")
+		if (cmd == "start" || cmd == "restart" || cmd == "enable")
 		  service.required_for_start.each do |required|
 		    complete	= complete + ";" + remote_function(
 			:update		=> "service_status_#{required}",
@@ -214,11 +209,10 @@ commands	= [ "start", "stop", "restart", ]
 			    :action	=> :show_status,
 			    :id		=> required
 			},
-			:condition	=> "update_state_needed ('#service_status_#{required}', '#{cmd}')",
 			:complete	=> "toggle_service_info ('#service_status_#{required}')"
 		    )
 		  end
-		elsif (cmd == "stop")
+		elsif (cmd == "stop" || cmd == "disable")
 		  service.required_for_stop.each do |required|
 		    complete	= complete + ";" + remote_function(
 			:update		=> "service_status_#{required}",
@@ -227,7 +221,6 @@ commands	= [ "start", "stop", "restart", ]
 			    :action	=> :show_status,
 			    :id		=> required
 			},
-			:condition	=> "update_state_needed ('#service_status_#{required}', '#{cmd}')",
 			:complete	=> "toggle_service_info ('#service_status_#{required}')"
 		    )
 		  end
@@ -244,81 +237,6 @@ commands	= [ "start", "stop", "restart", ]
 	end
      end %>
 
-
-      <!-- do not show enable/disable part for custom services -->
-      <%
-      if @permissions[:execute] && !service.custom?
-	[ "enable", "disable" ].each do |cmd|
-      %>
-	<%=
-		url	= {
-		    :id		=> cmd, 
-		    :action	=> "execute", 
-		    :service_id	=> service.name,
-		    :custom	=> service.custom
-		}
-		status_url	= {
-		    :controler	=> :services,
-		    :action	=> :show_status,
-		    :id		=> service.name,
-		    :custom	=> service.custom
-		}
-		html_options	= {
-		    :class	=> "button",
-		    :id		=> cmd
-		}
-		html_options[:style]	= "display: none" if (cmd == "enable" && service.enabled?) || (cmd == "disable" && !service.enabled?) 
-		label = case cmd
-		  when "enable"	then _("Start on Boot")
-		  when "disable" then _("Do Not Start on Boot")
-		  else cmd
-		end
-
-		complete   	= remote_function(:update => "service_status_#{service.name}",
-                       :url => status_url,
-                       :complete => "$('#service_progress_#{service.name}').hide(); $('#service_status_#{service.name}').show(); toggle_service_info ('#service_status_#{service.name}'); $('#service_result_#{service.name}').show();"
-                )
-
-		# dependent services must also update status
-		if (cmd == "enable")
-		  service.required_for_start.each do |required|
-		    complete	= complete + ";" + remote_function(
-			:update		=> "service_status_#{required}",
-			:url		=> {
-			    :controler	=> :services,
-			    :action	=> :show_status,
-			    :id		=> required
-			},
-			:condition	=> "update_state_needed ('#service_status_#{required}', '#{cmd}')",
-			:complete	=> "toggle_service_info ('#service_status_#{required}')"
-		    )
-		  end
-		elsif (cmd == "disable")
-		  service.required_for_stop.each do |required|
-		    complete	= complete + ";" + remote_function(
-			:update		=> "service_status_#{required}",
-			:url		=> {
-			    :controler	=> :services,
-			    :action	=> :show_status,
-			    :id		=> required
-			},
-			:condition	=> "update_state_needed ('#service_status_#{required}', '#{cmd}')",
-			:complete	=> "toggle_service_info ('#service_status_#{required}')"
-		    )
-		  end
-		end
-
-		link_to_remote label,
-		    :url	=> url,
-		    :loading	=> "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide(); $('#service_result_#{service.name}').hide();",
-		    :complete   => complete,
-		    :html	=> html_options,
-		    :update	=> "service_result_#{service.name}"
-	    %>
-	<%
-	  end
-        end
-	%>
       </p>
       <span class='service_result' id='service_result_<%=service.name%>'>
 	<%= render :partial => 'result' %>
